<resources>
    <string name="app_name">Fut</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Search  -->
    <string name="search_error_searching_teams">Erro ao buscar os times.</string>

    <!--  Matches  -->
    <string name="matches_error_searching_games">Erro ao buscar os jogos.</string>
    <string name="matches_game_date">%s/%s</string>
    <string name="matches_game_hour">%s:%s</string>
    <string name="matches_title_games">Jogos</string>
    <string name="matches_status_postponed">Adiada</string>
    <string name="matches_status_finished">Finalizada</string>
    <string name="matches_status_inprogress">Acontecendo agora</string>
    <string name="matches_status_cancelled">Cancelada</string>
    <string name="matches_status_abandoned">Abandonada</string>
    <string name="matches_status_not_played">Não iniciada</string>
    <string name="matches_status_to_be_confirmed">A confirmar</string>
    <string name="matches_no_games">Nenhuma partida.</string>
    <string name="matches_no_games_subtitle">Vá até o seu perfil e gerencie as suas ligas favoritas.</string>

    <!--  User Start Preferences  -->
    <string name="userstartpreferences_choose_country_title">Escolha o país do seu time</string>
    <string name="userstartpreferences_choose_team_title">Escolha o seu time de coração</string>
    <string name="userstartpreferences_choose_league_title">Escolha as ligas que você gostaria de acompanhar</string>
    <string name="userstartpreferences_choose_league_subtitle">Não se preocupe, você poderá alterar depois.</string>
    <string name="userstartpreferences_btn_next">Próximo</string>
    <string name="userstartpreferences_btn_finish">Finalizar</string>
    <string name="userstartpreferences_error_searching_leagues">Erro ao buscar as ligas.</string>
    <string name="userstartpreferences_error_searching_countries">Erro ao buscar os países.</string>

    <!--  Highlights  -->
    <string name="highlights_news_image">Imagem da notícia</string>
    <string name="highlights_news_error_searching_news">Erro ao buscar as notícias</string>
    <string name="highlights_your_highlights">Seus Destaques</string>

    <!--  Profile  -->
    <string name="profile_title">Perfil</string>
    <string name="profile_config_leagues">Gerenciar suas ligas favoritas</string>
    <string name="profile_config_team">Gerenciar o time do coração</string>
    <string name="profile_logout">Sair da conta</string>
    <string name="profile_delete_account">Excluir conta</string>
</resources>