<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.profile.ProfileFragment"
    android:background="@color/dark_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_background"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/profile_title"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_largexxl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cdv_user_container"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/dark_container"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ctl_user_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:cardCornerRadius="40dp">
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="4dp"
                            app:cardCornerRadius="40dp"
                            android:layout_gravity="center">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/diniz"
                                android:scaleType="centerCrop"
                                android:layout_gravity="center"/>

                        </androidx.cardview.widget.CardView>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/txt_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fernando Diniz"
                        android:textSize="@dimen/textsize_medium"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_bold"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/txt_user_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="fernandodiniz@gmail.com"
                        android:textSize="@dimen/textsize_medium"
                        android:textColor="@color/neutral1"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit_white_white_24"
                    android:tint="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdv_team_config"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cdv_user_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/dark_container"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="16dp"
                android:paddingHorizontal="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_team_color_accent_32"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/img_team"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/profile_config_team"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_medium"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginStart="8dp"
                    app:drawableEndCompat="@drawable/ic_arrow_right_24_white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdv_leagues_config"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cdv_team_config"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/dark_container"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="16dp"
                android:paddingHorizontal="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_league"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_trophy_color_accent_32"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/img_league"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/profile_config_leagues"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_medium"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginStart="8dp"
                    app:drawableEndCompat="@drawable/ic_arrow_right_24_white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cdv_leagues_config"
            app:layout_constraintVertical_bias="1"
            android:layout_marginTop="16dp"
            android:text="@string/profile_logout"
            android:textColor="@color/white"
            android:gravity="center"
            app:drawableStartCompat="@drawable/ic_logout_white_16"
            android:drawablePadding="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toBottomOf="@id/cdv_leagues_config"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/profile_delete_account"
            android:gravity="center_vertical"
            android:drawablePadding="4dp"
            android:textColor="@color/garnet_flu_500"
            app:drawableStartCompat="@drawable/ic_delete_white_16"
            app:drawableTint="@color/garnet_flu_500" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

